[package]
name = "llogin"
version = "0.1.2"
authors = ["smazmi"]
edition = "2021"
description = "LPU WiFi Manager: A CLI tool for managing Lovely Professional University WiFi connections."
readme = "DOCS.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs-next = "2.0.0"

[package.metadata.deb]
maintainer = "smazmi <sadiquemobaraka5@gmail.com>"
copyright = "2024 Sadique"
license-file = ["LICENSE"]
depends = "$auto"
section = "utility"
assets = [
  ["target/release/llogin", "usr/bin/","755"],
  ["DOCS.md","usr/share/doc/llogin/README","644"],
]
